Updating css to prevent breaks in layer labels
@jeathey this should resolve the issues with layer names wrapping in the layers selector, Issue #13

--- a/web/sass/partials/_two_col.scss
+++ b/web/sass/partials/_two_col.scss
@@ -133,8 +133,9 @@ div.olControlAttribution {
   } 
 }
 
+.baseLayersDiv {
+  white-space: nowrap;
+}
 .dataLayersDiv {
-  .labelSpan {
-    white-space: nowrap;
-  }
+  white-space: nowrap;
 }
